<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Hackathon2012Activity!</string>
    <string name="app_name">Exede in the Air</string>
    <string name="FlightNumber">Flight Number</string>
    <string name="FlightDate">Flight Date</string>
    <string name="Submit">Submit</string>
    <string name="movieTitle">Choose a Movie</string>
    <string name="watchMovie">Watch Free Movie!</string>
    <string name="movieInfoScreen">Back to Movie Info</string>
    <string name="refresh">Refresh</string>
    <string name="statsNote">Can only watch above 10000 feet. Press refresh when electronic devices are allowed.</string>
    <string name="movie">[Movie Title]</string>
    <string name="directorLabel">Director:</string>
    <string name="lengthLabel">Length:</string>
    <string name="ratingLabel">Rating:</string>
    <string name="genreLabel">Genre:</string>
    <string name="view_results">View Results</string>
    <string name="results">Results</string>
    <string name="hintStatus">Enter a 140 character tweet</string>
    <string name="tweet">Tweet</string>
    <string name="share">Share!</string>
    <string name="purchaseAdd">Purchase Exede In the Air for premium internet access and more available movies!\n\n Brought to you by Exede and JetBlue</string>
    <string name="purchase">Purchase</string>
    <string name="twitterTitle">Post to Twitter</string>
</resources>