<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="15" >

    <TextView
        android:id="@+id/title"
        android:layout_width="312dp"
        android:layout_column="1"
        android:layout_columnSpan="6"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/movie"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/poster"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_row="3"
        android:layout_rowSpan="3"
        android:src="@drawable/placeholder" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.Holo.Light.RatingBar.Small"
        android:layout_column="5"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:numStars="10"
        android:stepSize=".1" />

    <Button
        android:id="@+id/button1"
        android:layout_column="5"
        android:layout_row="5"
        android:text="Button" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_column="6"
        android:layout_gravity="left"
        android:layout_row="5"
        android:indeterminate="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/description"
        android:layout_width="318dp"
        android:layout_height="123dp"
        android:layout_column="1"
        android:layout_columnSpan="7"
        android:layout_gravity="left"
        android:layout_row="6"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView1"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="8"
        android:text="@string/directorLabel"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/director"
        android:layout_width="252dp"
        android:layout_column="3"
        android:layout_columnSpan="5"
        android:layout_gravity="bottom"
        android:layout_row="8"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="10"
        android:text="@string/lengthLabel"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/length"
        android:layout_width="250dp"
        android:layout_column="3"
        android:layout_columnSpan="5"
        android:layout_gravity="bottom"
        android:layout_row="10"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="12"
        android:text="@string/ratingLabel"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="252dp"
        android:layout_column="3"
        android:layout_columnSpan="5"
        android:layout_gravity="left"
        android:layout_row="12"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="1"
        android:layout_row="14"
        android:layout_rowSpan="3"
        android:text="@string/genreLabel"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="255dp"
        android:layout_column="3"
        android:layout_columnSpan="5"
        android:layout_gravity="bottom"
        android:layout_row="14"
        android:layout_rowSpan="2"
        android:text="TextView" />

    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="35dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" />

    <Space
        android:layout_width="10dp"
        android:layout_height="1dp"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="289dp"
        android:layout_height="1dp"
        android:layout_column="7"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="13dp"
        android:layout_column="0"
        android:layout_row="3" />

    <Space
        android:layout_width="1dp"
        android:layout_height="44dp"
        android:layout_column="0"
        android:layout_row="4" />

    <Space
        android:layout_width="1dp"
        android:layout_height="136dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5" />

    <Space
        android:layout_width="1dp"
        android:layout_height="8dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="7" />

    <Space
        android:layout_width="1dp"
        android:layout_height="8dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="9" />

    <Space
        android:layout_width="1dp"
        android:layout_height="8dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="11" />

    <Space
        android:layout_width="1dp"
        android:layout_height="8dp"
        android:layout_column="0"
        android:layout_row="13" />

    <Space
        android:layout_width="1dp"
        android:layout_height="7dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="14" />

    <Space
        android:layout_width="18dp"
        android:layout_height="1dp"
        android:layout_column="4"
        android:layout_row="0" />

    <Space
        android:layout_width="92dp"
        android:layout_height="1dp"
        android:layout_column="5"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="95dp"
        android:layout_height="1dp"
        android:layout_column="6"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

</GridLayout>